--- a/src/components/interactive/interactive.module.css
+++ b/src/components/interactive/interactive.module.css
@@ -2,7 +2,7 @@
   display: flex;
   height: 90vh;
   width: auto;
-  background-color: pink;
+  background-color: white;
   justify-content: space-around;
   align-items: center;
 }
